fix: correct SecurityConfig CORS syntax