@@ -9,8 +9,7 @@ import org.springframework.security.config.annotation.authentication.configurati
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.config.http.SessionCreationPolicy;
-import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder; // Used conditionally if passwords are encrypted
-import org.springframework.security.crypto.password.NoOpPasswordEncoder; // Currently using NoOp since old DB might have plain text
+import org.springframework.security.crypto.password.NoOpPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
@@ -19,6 +18,7 @@ import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 @EnableWebSecurity
@@ -28,9 +28,9 @@ public class SecurityConfig {
     private JwtFilter jwtFilter;
 
     @Bean
-public PasswordEncoder passwordEncoder() {
-    return new BCryptPasswordEncoder();
-}
+    public PasswordEncoder passwordEncoder() {
+        return NoOpPasswordEncoder.getInstance();
+    }
 
     @Bean
     public AuthenticationManager authenticationManager(AuthenticationConfiguration authConfig) throws Exception {
@@ -40,71 +40,41 @@ public PasswordEncoder passwordEncoder() {
     @Bean
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
         http
-                .cors().and()
-                .csrf().disable()
-                .authorizeHttpRequests()
-                .requestMatchers("/api/auth/**").permitAll()
-                .requestMatchers(HttpMethod.GET, "/api/destinations/**", "/api/hotels/**", "/api/flights/**",
-                        "/api/packages/**")
-                .permitAll()
-                .requestMatchers(HttpMethod.POST, "/api/destinations", "/api/hotels", "/api/flights", "/api/packages",
-                        "/api/destinations/**", "/api/hotels/**", "/api/flights/**", "/api/packages/**")
-                .hasRole("MANAGER")
-                .requestMatchers(HttpMethod.PUT, "/api/destinations/**", "/api/hotels/**", "/api/flights/**",
-                        "/api/packages/**")
-                .hasRole("MANAGER")
-                .requestMatchers(HttpMethod.DELETE, "/api/destinations/**", "/api/hotels/**", "/api/flights/**",
-                        "/api/packages/**")
-                .hasRole("MANAGER")
-                .requestMatchers("/api/ai/**").permitAll() // AI endpoint
-                .anyRequest().authenticated()
-                .and()
-                .sessionManagement()
-                .sessionCreationPolicy(SessionCreationPolicy.STATELESS);
+            .cors().and()
+            .csrf().disable()
+            .authorizeHttpRequests()
+            .requestMatchers("/api/auth/**").permitAll()
+            .requestMatchers(HttpMethod.GET, "/api/destinations/**", "/api/hotels/**",
+                    "/api/flights/**", "/api/packages/**").permitAll()
+            .requestMatchers(HttpMethod.POST, "/api/destinations/**", "/api/hotels/**",
+                    "/api/flights/**", "/api/packages/**").hasRole("MANAGER")
+            .requestMatchers(HttpMethod.PUT, "/api/destinations/**", "/api/hotels/**",
+                    "/api/flights/**", "/api/packages/**").hasRole("MANAGER")
+            .requestMatchers(HttpMethod.DELETE, "/api/destinations/**", "/api/hotels/**",
+                    "/api/flights/**", "/api/packages/**").hasRole("MANAGER")
+            .requestMatchers("/api/ai/**").permitAll()
+            .anyRequest().authenticated()
+            .and()
+            .sessionManagement()
+            .sessionCreationPolicy(SessionCreationPolicy.STATELESS);
 
         http.addFilterBefore(jwtFilter, UsernamePasswordAuthenticationFilter.class);
-
         return http.build();
     }
 
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
-
         CorsConfiguration configuration = new CorsConfiguration();
-<<<<<<< HEAD
-        configuration.setAllowedOrigins(Arrays.asList(
-    "http://localhost:3000",
-    "travel-ease-frontend-inky.vercel.app"   
-));
+        configuration.setAllowedOriginPatterns(List.of(
+            "http://localhost:3000",
+            "https://*.vercel.app"
+        ));
         configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
         configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type"));
-        configuration.setExposedHeaders(Arrays.asList("Authorization"));
-=======
-
-        configuration.setAllowedOriginPatterns(Arrays.asList(
-                "http://localhost:3000",
-                "https://*.vercel.app",
-                "https://travel-ease-frontend-inky.vercel.app" 
-        ));
-
-        configuration.setAllowedMethods(Arrays.asList(
-                "GET", "POST", "PUT", "DELETE", "OPTIONS"
-        ));
-
-        configuration.setAllowedHeaders(Arrays.asList(
-                "Authorization", "Content-Type"
-        ));
-
-        configuration.setExposedHeaders(Arrays.asList(
-                "Authorization"
-        ));
-
+        configuration.setExposedHeaders(List.of("Authorization"));
         configuration.setAllowCredentials(true);
-
->>>>>>> 2c988b2 (fix: production CORS + env config)
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
-
         return source;
     }
 }
